# book-manager

./: README.md  package-lock.json  package.json  tsconfig.node.json
bookmanager_server/: CMakeLists.txt  CServer.cpp  CServer.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  Singleton.h  const.h  main.cpp
bookmanager_server/.cache/clangd/index/: CServer.cpp.625B04F6CDF7AD16.idx  CServer.h.D464039001FB6764.idx  HttpConnection.h.CE8E2E5781F1641E.idx  Httpconnection.cpp.FEB3FC7945AFCF58.idx  LogicSystem.cpp.7F7DBCC5E4B63EC9.idx  LogicSystem.h.251E3A34D384FED2.idx  Singleton.h.E920CCC05F40F0AF.idx  const.h.F807134D530FEF7D.idx  main.cpp.067C1BE5A623DDCF.idx
src/: App.vue  main.ts
src/components/: BookAdmin.vue  BookList.vue  History.vue  Login.vue  MyBooks.vue  Register.vue
src/router/: index.ts
